--- a/index.html
+++ b/index.html
@@ -118,10 +118,28 @@
 
 
     <section id="contact">
-
+        <div class="contactDiv container-fluid">
+            <h2>Contact Me!</h2>
+            <p>If youre interested in the shittin' and gigglin' that I have to offer, don't hesitate to call!</p>
+            <p>Im just a phone call away!</p>
+        </div>
 
 
     </section>
+
+    <footer>
+        <div class="row">
+            <div class="col">
+                <a href="https://myspace.com/">MySpace</a>
+            </div>
+            <div class="col">
+                <a href="https://www.bing.com/">linkdIn</a>
+            </div>
+            <div class="col">
+                <a href="https://www.instagram.com/">twitter</a>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
